Settings: Display: font size in 5% steps from 80% to 130%
Change-Id: I80e490e5e435e39e40f102066eeeeb712e8ba01e

--- a/res/xml/display_rotation.xml
+++ b/res/xml/display_rotation.xml
@@ -22,7 +22,7 @@
         android:key="accelerometer"
         android:title="@string/accelerometer_title" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+    <com.stag.horns.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_rotation"
         android:title="@string/lockscreen_rotation_title"
         android:summary="@string/lockscreen_rotation_summary"
