--- a/res/values/stag_symbols.xml
+++ b/res/values/stag_symbols.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2007 The Android Open Source Project
+<!--
+     Copyright (C) 2019 The StagOS Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-
-    <color name="dashboard_system_accent_follow">#2196F3</color>
-    <color name="dashboard_system_accent_start">@*android:color/accent_device_default_light</color>
-
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Smart Charging -->
-    <bool name="config_supportSmartCharging">false</bool>
+    <java-symbol type="bool" name="config_supportSmartCharging" />
 </resources>
-
