--- a/res/xml/gesture_nav_tweaks.xml
+++ b/res/xml/gesture_nav_tweaks.xml
@@ -19,6 +19,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:title="@string/navbar_gesture_tweaks_pref_title" >
 
+    <com.stag.horns.preferences.SystemSettingSwitchPreference
+        android:key="back_swipe_extended"
+        android:title="@string/back_swipe_extended_title"
+        android:summary="@string/back_swipe_extended_summary"
+        android:defaultValue="false" />
+
     <com.stag.horns.preferences.SystemSettingListPreference
         android:key="long_back_swipe_timeout"
         android:title="@string/long_back_swipe_timeout_title"
