Add Touch Sensitivity functionality
Change-Id: I64650f9b0406bf8bd7581b316b56bd82d37575fa

--- a/res/values/stag_config.xml
+++ b/res/values/stag_config.xml
@@ -27,4 +27,7 @@
     <!-- Device specific doze package -->
     <string name="config_customDozePackage" translatable="false"></string>
 
+    <!-- Whether to display touch sensitivity switch -->
+    <bool name="config_show_touch_sensitivity">false</bool>
+
 </resources>
