--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -147,6 +147,13 @@
         android:fragment="com.android.settings.display.DisplayCutoutForceFullscreenSettings"
         settings:controller="com.android.settings.display.DisplayCutoutForceFullscreenPreferenceController" />
 
+    <SwitchPreference
+        android:key="touch_sensitivity"
+        android:summary="@string/touch_sensitivity_summary"
+        android:title="@string/touch_sensitivity_title"
+        settings:controller="com.android.settings.display.TouchSensitivityPreferenceController"
+	settings:keywords="@string/keywords_touch_sensitivity" />                  
+
     <!--<ListPreference
         android:key="theme"
         android:title="@string/device_theme"
@@ -174,7 +181,6 @@
             android:key="android.theme.customization.adaptive_icon_shape"
             android:title="@string/theme_customization_icon_shape_title"/>
     </PreferenceCategory>
-
 
     <Preference
         android:key="vr_display_pref"
