--- a/res/values/stag_colors.xml
+++ b/res/values/stag_colors.xml
@@ -15,5 +15,7 @@
     <color name="dashboard_system_accent_follow">#2196F3</color>
     <color name="dashboard_system_accent_start">@*android:color/accent_device_default_light</color>
 
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">false</bool>
 </resources>
 
